--- a/assets/components/items.css
+++ b/assets/components/items.css
@@ -1,4 +1,3 @@
-
 .items {
   display: flex;
   flex-direction: column;
@@ -14,13 +13,13 @@
   justify-content: space-around;
   align-items: center;
   padding-bottom: 10px;
-  width: 250px;
+  width: auto;
   height: 140px;
   overflow: hidden;
 }
 .item .cantidad {
   display: flex;
-  border: 1px solid gray;
+  border: 1px solid rgb(207, 206, 206);
   padding: 5px;
   display: block;
   height: 46px;
@@ -28,7 +27,6 @@
   align-items: center;
   justify-content: space-around;
   box-sizing: border-box;
-  float: center;
   text-align: center;
 }
 .item .cantidad > p {
@@ -84,5 +82,5 @@
 }
 
 .new-price-2 {
-  color: black;
+  color: var(--bs-body-color);
 }
