--- a/assets/components/items.css
+++ b/assets/components/items.css
@@ -22,7 +22,7 @@
   border: 1px solid rgb(207, 206, 206);
   padding: 5px;
   display: block;
-  height: 46px;
+  height: auto;
   width: 100px;
   align-items: center;
   justify-content: space-around;
